- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
  Not Evaluated                     
     - 
    None
 - 
    Qt Creator 14.0.0
 - 
    None
 
- 
        
 - 
        0aa5116bc (master)
 
How to reproduce:
Create Qt application from template. Add state machine. Add two states and signal between them. Try to move signal in scxml designer.
Scxml visual designer will automatically move it back to the center of the line but scxml file will correctly update position. 
Note: Same scxml file opened in Qt Creator 5.0.0 works correctly and scxml file coordinates match those from scxml designer.
- resulted from
 - 
                    
QTCREATORBUG-21946 SCXML Designer should show conditions on transitions
-         
     - Closed
 
 -         
 
- mentioned in
 - 
                    
Page Loading...
 
| For Gerrit Dashboard: QTCREATORBUG-31397 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 586255,4 | SCXMLEditor: Make names and conditions movable | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |