SCXMLEditor: Make names and conditions movable

Fixes: QTCREATORBUG-31397
Change-Id: I275523b4e66f934a0d2029335acb56d789386c6e
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>